tests/baselines/reference/project/intReferencingExtAndInt/amd/intReferencingExtAndInt.errors.txt
internal2.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internal2.ts(2,21): error TS1147: Import declarations in a namespace cannot reference a module.
internal2.ts(2,21): error TS2792: Cannot find module 'external2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== internal2.ts (3 errors) ====
    module outer {
           ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	import g = require("external2")
    	                   ~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
    	                   ~~~~~~~~~~~
!!! error TS2792: Cannot find module 'external2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    	export var a = g.square(5);
    	export var b = "foo";
    }